[gd_scene format=3 uid="uid://bm0pft88o4l3v"]

[ext_resource type="Script" uid="uid://df3nuk31hkhq" path="res://ui/hud.gd" id="1_rbyyf"]

[node name="Hud" type="CanvasLayer" unique_id=418786240]
process_mode = 3
layer = 100
script = ExtResource("1_rbyyf")

[node name="Control" type="Control" parent="." unique_id=1029935692]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ValueCrumbs" type="Label" parent="Control" unique_id=275267243]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "9"
horizontal_alignment = 1

[node name="GameOverMessage" type="Control" parent="Control" unique_id=302633441]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -316.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/GameOverMessage" unique_id=793133310]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="Control/GameOverMessage/MarginContainer" unique_id=919548067]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="Control/GameOverMessage/MarginContainer/PanelContainer" unique_id=434400225]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverMessage/MarginContainer/PanelContainer/MarginContainer2" unique_id=1464934972]
layout_mode = 2

[node name="Label" type="Label" parent="Control/GameOverMessage/MarginContainer/PanelContainer/MarginContainer2/VBoxContainer" unique_id=1390983365]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/GameOverMessage/MarginContainer/PanelContainer/MarginContainer2/VBoxContainer" unique_id=708944062]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "<SPACE> to try again"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelComplete" type="Control" parent="Control" unique_id=1958694834]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -316.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/LevelComplete" unique_id=701529466]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="PanelContainer" type="PanelContainer" parent="Control/LevelComplete/MarginContainer" unique_id=2005040151]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer2" type="MarginContainer" parent="Control/LevelComplete/MarginContainer/PanelContainer" unique_id=983952561]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/LevelComplete/MarginContainer/PanelContainer/MarginContainer2" unique_id=1900535288]
layout_mode = 2

[node name="Label" type="Label" parent="Control/LevelComplete/MarginContainer/PanelContainer/MarginContainer2/VBoxContainer" unique_id=1050710264]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "YOU WIN!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/LevelComplete/MarginContainer/PanelContainer/MarginContainer2/VBoxContainer" unique_id=1074150063]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "<SPACE> to go again!"
horizontal_alignment = 1
vertical_alignment = 1
